Implementation of basic Frontend for the app (#1)
* Started work on the frontend implementation

* Added logic to category. Work in progress.

* Refactored current category view. Added delete option. Moved list logic to separate component.

* Implemented items page. Implemented redux state for items.

* Updated redux store. Fixed minor issues. Refactored code.
Finished skeleton of main functionality

* Implemented rest of the views. Code refactoring.

* Added view to DB to simplify and optimize retrieving categories.

* Fixed/adjusted tests. Added new table for user settings.

* Fixed subselect string

* Implemented main functionality for ui. Updated DB schema. Adjusted tests. Reformated code.

* Added additional table for keeping invalidated tokens. Fixed error passing from API to UI.

* Implemented token refresh functionality. Added logout functionality. Fixed/adjusted/deleted tests.
Implemented passing auth headers via axios interceptors.

* Added missing DeleteAccount page. Created Docker images for services. Updated Docker-compose config. Updated documentation. Minor fixes and refactoring.
